# IMS

./: .gitignore  README.md
draft/: ims_webserver.py
draft/Visualizer/: bla.html  map.txt  test_svg.html  viz.html
draft/cm/: comm_module.py
draft/comm_module/: comm_module.py
draft/database/: dbWrapper.py
draft/scripts/: rPi_Ping.py  rPi_check.py  rPi_check_v2.py
draft/static/: .styles.css.swp  control.js  see.js  styles.css
draft/templates/: .homePage.html.swp  homePage.html
snippets/: Flaskr.py  Flaskr_redis.py  clearMongo.py  pipeTest.py  readMongo.py  styles.css  testLive_client.py  testMongo.py  testMongoCC.py  testPi.py  testSharedMem.py  testSocketC.c  testSocketClient.py  testSocketServer.py  testThread.py  testViz.py
snippets/mapPointsTest/: map_point_apr_08  processPoints.py
snippets/socket-faq-examples/: Makefile  NB-APOLOGY  README  nbserver.c  tcpclient  tcpclient.c  tcpserver  tcpserver.c  udpclient  udpclient.c  udpserver  udpserver.c
snippets/templates/: htmlLiveTest.html  layout.html  ping_ip.html  testLive2.html  viz.html
source/: ims_webserver.py
source/Robot_and_Vehicle/: README  controller.py
source/Robot_and_Vehicle/POI/: CMakeCache.txt  CMakeLists.txt  CamCV.cpp  Client.cpp  Client.h  Client.py  Makefile  OCR.cpp  OCR.h  Server.py  camcv  cmake_install.cmake  main_backup.cpp  ocr_script.sh
source/comm_module/: comm_module.py
source/database/: dbWrapper.py
source/scripts/: pingDaemon.sh  rPi_check.py
source/static/: control.js  control_v2.js  styles.css  visualizer.js
source/templates/: homePage.html  ims_v2.html  (+1 more)
(+110 files in other folders)
